Fix "Let's go" button being stretched in the settings element.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,12 +18,6 @@ fieldset {
 	border-width: 1px;
 
 	padding: 6px 10px 14px 10px;
-
-	display: flex;
-	align-content: flex-start;
-
-	row-gap: 3px;
-	column-gap: 4px;
 }
 
 img {
@@ -31,9 +25,15 @@ img {
 }
 
 main > fieldset {
+	display: flex;
+
 	width: 320px;
 
 	flex-flow: row wrap;
+	align-content: flex-start;
+
+	row-gap: 3px;
+	column-gap: 4px;
 }
 
 main > fieldset:only-of-type {
@@ -116,7 +116,7 @@ p {
 #inner-fieldset {
 	display: flex;
 
-	margin: 8px 16px 16px 16px;
+	margin: 8px 16px 18px 16px;
 
 	gap: 16px;
 
@@ -173,12 +173,12 @@ p {
 	margin: 0 auto 24px auto;
 
 	max-width: 320px;
-
-	flex-flow: column nowrap;
 }
 
 #settings > button {
+	display: block;
 	margin: auto;
+	width: auto;
 
 	padding: 3px 8px 3px 8px;
 }
